--- a/MegaTravelFront/src/app/nav/nav.component.html
+++ b/MegaTravelFront/src/app/nav/nav.component.html
@@ -7,8 +7,9 @@
           <li *ngIf="!anyLogged"><a routerLink="/login">Prijava</a></li>
           <li *ngIf="anyLogged">{{profile.username}}</li>
           <li *ngIf="anyLogged && !adminLogged"><a routerLink="/userreservations">Moje rezervacije</a></li>
+          <li *ngIf="anyLogged && !adminLogged"><a routerLink="/messages">Poruke</a></li>
           <li *ngIf="anyLogged && adminLogged"><a routerLink="/admin/allusers">Korisnici</a></li>
-          <li *ngIf="anyLogged && adminLogged"><a routerLink="/admin/allcomments">Komentari</a></li>
+          <li *ngIf="anyLogged && adminLogged"><a routerLink="/admin/comments">Komentari</a></li>
           <li *ngIf="anyLogged && adminLogged"><a routerLink="/admin/allagents">Agenti</a></li>>
           <li><a *ngIf="anyLogged" (click)="logOut()" routerLink="/">Odjava</a></li>
         </ul>
